classDiagram
    %% --- Core Node Abstraction ---
    class Node {
        <<Abstract>>
        #uint8_t _nodeId
        #SystemContext* _context
        +virtual void begin()
        +virtual void update()
        +virtual void setup()
    }

    %% --- Concrete Implementations ---
    class NodoSensor {
        +NodoSensor(id)
        +setup()
        +registerSensors()
    }

    class NodoActuador {
        +NodoActuador(id)
        +setup()
        +configureExecutor()
    }

    %% --- System Context (The Composer) ---
    class SystemContext {
        +Executor
        +ProtocolEngine
        +SensorManager
        +loop()
    }

    %% --- Relationships ---
    Node <|-- NodoSensor : implements
    Node <|-- NodoActuador : implements
    Node *-- SystemContext : composes
    

